<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".BiographyActivity"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_early_life_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/early_life_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_early_life"
            android:layout_width="352dp"
            android:layout_height="174dp"
            android:layout_marginTop="20dp"
            android:text="@string/early_life_bio"
            app:layout_constraintStart_toStartOf="@+id/text_early_life_title"
            app:layout_constraintTop_toBottomOf="@+id/text_early_life_title" />

        <ImageView
            android:id="@+id/image_early_life"
            android:layout_width="285dp"
            android:layout_height="227dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description_early_life"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_early_life"
            app:srcCompat="@drawable/young" />

        <View
            android:id="@+id/divider_one"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_early_life" />

        <TextView
            android:id="@+id/text_education_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/education_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_one" />

        <TextView
            android:id="@+id/text_education"
            android:layout_width="354dp"
            android:layout_height="252dp"
            android:layout_marginTop="20dp"
            android:text="@string/education_bio"
            app:layout_constraintStart_toStartOf="@+id/text_education_title"
            app:layout_constraintTop_toBottomOf="@+id/text_education_title" />

        <ImageView
            android:id="@+id/image_education"
            android:layout_width="282dp"
            android:layout_height="211dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description_education"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_education"
            app:srcCompat="@drawable/education" />

        <View
            android:id="@+id/divider_two"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="24dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_education" />

        <TextView
            android:id="@+id/text_accomplishments_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/accomplishments_title"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider_two" />

        <TextView
            android:id="@+id/text_accomplishments"
            android:layout_width="353dp"
            android:layout_height="325dp"
            android:layout_marginTop="20dp"
            android:text="@string/accomplishments_bio"
            app:layout_constraintStart_toStartOf="@+id/text_accomplishments_title"
            app:layout_constraintTop_toBottomOf="@+id/text_accomplishments_title" />

        <ImageView
            android:id="@+id/image_accomplishments"
            android:layout_width="342dp"
            android:layout_height="179dp"
            android:layout_marginBottom="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/content_description_accomplishments"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_accomplishments"
            app:srcCompat="@drawable/award" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>